Have Transport Call Creator chain into Timestamp Editor as necessary
Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/src/app/view/transport-call-creator/transport-call-creator.component.html
+++ b/src/app/view/transport-call-creator/transport-call-creator.component.html
@@ -97,215 +97,12 @@
 
   <!-- Timestamp drop down-->
   <div class="p-field col-12 md:col-5">
-    <label for="timestampType"> Check to create Timestamp </label>
-    <input class="p-checkbox-box" type="checkbox" [(ngModel)]="timestampChecking" [ngModelOptions]="{standalone: true}">
-  </div>
-
-  <div class="p-fluid p-formgrid grid" [hidden]="!shouldCreateTimestamp()">
-    <div class="md:col-6" [hidden]="!shouldCreateTimestamp()">
-      <label for="negotiationCycle">{{ 'general.table.header.negotiationCycle.label' | translate }}: </label>
-      <p-dropdown id="negotiationCycle" styleClass="dropdown"
-      [options]="negotiationCycles$ | async"
-      [showClear]=true
-      optionLabel="cycleName"
-      [filter]=true filterBy="cycleName" appendTo="body"
-      (onChange)="onSelectedNegotiationCycle($event)"
-      placeholder="{{ 'general.negotiationCycle.select' | translate }}">
-      </p-dropdown>
-
-      <label for="timestampType">{{ 'general.table.header.timestamp.label' | translate }}: </label>
-      <p-dropdown id="timestampType" formControlName="timestampType" styleClass="dropdown" [options]="timestampTypes"
-        [filter]=true filterBy="label" appendTo="body" (onChange)="updateTimestampDefinition();">
-      </p-dropdown>
-      <span
-        *ngIf="transportCallFormGroup.get('timestampType').hasError('required') && transportCallFormGroup.get('timestampType').touched "
-        class="p-invalid">
-        {{ 'general.timestamp.validation.timestampType.required' | translate }}
-      </span>
-    </div>
-
-    <!-- publisherRole dropdown-->
-    <ng-container *ngIf="selectablePublisherRoles$ | async as publisherRoles">
-      <div class="md:col-6" [hidden]="publisherRoles.length < 2 || !shouldCreateTimestamp()">
-        <label for="publisherRole">{{ 'general.publisherRole.label' | translate }}: </label>
-        <p-dropdown id="publisherRole"
-                    styleClass="dropdown"
-                    formControlName="publisherRole"
-                    [options]="publisherRoles"
-                    [filter]="true"
-                    filterBy="publisherRoleName,publisherRole"
-                    optionLabel="publisherRoleName"
-                    placeholder="{{ 'general.publisherRole.select' | translate }}"
-                    appendTo="body">
-          <ng-template let-publisherRoleDetail pTemplate="item">
-            <div>{{publisherRoleDetail.publisherRoleName}} ({{publisherRoleDetail.publisherRole}})</div>
-          </ng-template>
-        </p-dropdown>
-      </div>
-    </ng-container>
-
-    <!-- create event timestamp calender-->
-    <div class="md:col-6" [hidden]="!shouldCreateTimestamp()">
-      <label for="eventtimestamp">{{ 'general.table.header.eventTimestamp.label' | translate }}: </label>
-      <div class="p-fluid p-formgrid grid">
-        <div class="p-field col-12 md:col-6">
-          <p-calendar id="eventtimestamp" appendTo="body" formControlName="eventTimestampDate" hourFormat="24"
-            [monthNavigator]="true" [showButtonBar]="false" [showIcon]="true" [showWeek]="true" [yearNavigator]="true"
-            yearRange="2010:2030" styleClass="date-time-date-field"
-            placeholder="{{ 'general.timestamp.date.event' | translate }}" [panelStyleClass]="'datetime-panel'">
-          </p-calendar>
-          <span
-            *ngIf="transportCallFormGroup.get('eventTimestampDate').hasError('required') && transportCallFormGroup.get('eventTimestampDate').touched || transportCallFormGroup.get('eventTimestampTime').hasError('required') && transportCallFormGroup.get('eventTimestampTime').touched"
-            class="p-invalid">
-            {{ 'general.timestamp.validation.eventTimestamp.required' | translate }}
-          </span>
-        </div>
-        <div class="p-field col-12 md:col-6">
-          <p-inputMask formControlName="eventTimestampTime" mask="99:99"
-            placeholder="{{ 'general.timestamp.time' | translate }}" styleClass="datetime-time-time-field">
-          </p-inputMask>
-          <button pTooltip="{{ 'general.currentTime.tooltip' | translate }}" tooltipPosition="top"
-            tooltipStyleClass="ToolTipClass" class="minus-rounded-borders" type="button" pButton pRipple
-            icon="pi pi-clock" styleClass="p-button-success" (click)="setEventTimestampToNow()"></button>
-        </div>
-      </div>
-    </div>
-
-    <!-- TERMINAL -->
-    <div class="md:col-6" [hidden]="!showTerminalOption() || !shouldCreateTimestamp()">
-      <label for="terminal">{{ 'general.terminal.label' | translate }}:</label>
-
-
-      <p-dropdown appendTo="body" formControlName="terminal" id="terminal" [options]="terminals$ | async"
-        optionLabel="facilitySMDGCode"
-        [showClear]=true
-        [filter]="true"
-        filterBy="facilitySMDGCode,facilityName"
-        placeholder="{{ 'general.terminal.select' | translate }}">
-        <ng-template let-terminal pTemplate="item">
-          <div *ngIf="!terminal">
-            <div>Select Terminal</div>
-          </div>
-          <div *ngIf="terminal">
-            <div>{{terminal.facilitySMDGCode}}</div>
-            <div class="portListName">{{terminal.facilityName}}</div>
-          </div>
-        </ng-template>
-      </p-dropdown>
-      <span
-        *ngIf="transportCallFormGroup.get('port').hasError('required') && transportCallFormGroup.get('terminal').touched"
-        class="p-invalid">
-        {{ 'general.transportCall.validation.port.empty' | translate }} to choose a terminal! <br>
-      </span>
-      <span *ngIf="transportCallFormGroup.get('terminal').hasError('required')" class="p-invalid">
-        {{ 'general.transportCall.validation.terminal.empty' | translate }}
-      </span>
-    </div>
-
-    <!-- Location Name -->
-    <div class="md:col-6" [hidden]="!shouldCreateTimestamp() || !showLocationNameOption()">
-      <label for="locationName">{{ locationNameLabel | translate }}:</label>
-      <input id="locationName" formControlName="locationName" pInputText style="width: 100%" type="text" />
-      <span
-        *ngIf="transportCallFormGroup.get('locationName').hasError('required') && transportCallFormGroup.get('locationName').touched"
-        class="p-invalid">
-        {{ 'general.transportCall.table.locationName.required' | translate }}
-        {{ transportCallFormGroup.get('timestampType')?.value.timestampTypeName }}
-      </span>
-    </div>
-
-    <!-- Delay Code -->
-    <div class="md:col-6" [hidden]="!shouldCreateTimestamp()">
-      <label for="delayCode">{{"general.delaycode.label" | translate}}</label>
-      <p-dropdown id="delayCode"
-                  [options]="delayCodes$ | async"
-                  formControlName="delayCode"
-                  [filter]="true"
-                  [showClear]=true
-                  appendTo="body"
-                  [group]="false"
-                  placeholder="{{ 'general.comment.select' | translate }}">
-        <ng-template let-delayCode pTemplate="selectedItem">
-          <div *ngIf="delayCode" class="delayCodeSelectedWrapper">
-            <div class="delayCodeSelected__smdgCode">{{delayCode.smdgCode}}</div>
-            <div class="delayCodeSelected__delayType">&nbsp;&middot;&nbsp;{{delayCode.delayType}}
-            </div>
-            <div class="delayCodeSelected__delayDetails">&nbsp;&middot;&nbsp;{{delayCode.name}}</div>
-            <div class="delayCodeSelected__delayDetails">&nbsp;&middot;&nbsp;{{delayCode.description}}</div>
-          </div>
-        </ng-template>
-        <ng-template let-delayCode pTemplate="item">
-          <div class="delayCodeDetails" *ngIf="delayCode">
-            <div class="delayCodeDetails__smdgCode">{{delayCode.smdgCode}}</div>
-            <div class="delayCodeDetails__delayType">{{delayCode.delayType}}</div>
-            <div class="delayCodeDetails__delayName">{{delayCode.name}}</div>
-            <div class="delayCodeDetails__delaydescription">{{delayCode.description}}</div>
-          </div>
-        </ng-template>
-      </p-dropdown>
-    </div>
-
-    <!-- Vessel latitude -->
-    <ng-container *ngIf="showVesselPosition$ | async as showVesselPosition">
-      <div class="md:col-6" [hidden]="!showVesselPosition || !shouldCreateTimestamp() ">
-        <label for="vesselPositionLatitude">{{ "general.timestamp.vesselPosition.latitude.label" | translate
-          }}:</label>
-        <input id="vesselPositionLatitude" formControlName="vesselPositionLatitude" pInputText style="width: 100%"
-          type="text" />
-        <span *ngIf="transportCallFormGroup.get('vesselPositionLatitude').hasError('maxlength')" class="p-invalid">
-          {{ 'general.timestamp.vesselPosition.latitude.maxLength' | translate }}
-        </span>
-        <span *ngIf="transportCallFormGroup.get('vesselPositionLatitude').hasError('pattern')" class="p-invalid">
-          {{ 'general.timestamp.vesselPosition.latitude.pattern' | translate }}
-        </span>
-      </div>
-
-      <!-- Vessel longitude -->
-      <div class="md:col-6" [hidden]="!showVesselPosition || !shouldCreateTimestamp()">
-        <label for="vesselPositionLongitude">{{ "general.timestamp.vesselPosition.longitude.label" | translate }}:</label>
-        <input id="vesselPositionLongitude" formControlName="vesselPositionLongitude" pInputText style="width: 100%"
-          type="text" />
-        <span *ngIf="transportCallFormGroup.get('vesselPositionLongitude').hasError('maxlength')" class="p-invalid">
-          {{ 'general.timestamp.vesselPosition.longitude.maxLength' | translate }}
-        </span>
-        <span *ngIf="transportCallFormGroup.get('vesselPositionLongitude').hasError('pattern')" class="p-invalid">
-          {{ 'general.timestamp.vesselPosition.longitude.pattern' | translate }}
-        </span>
-      </div>
-    </ng-container>
-
-      <!-- Vessel draft -->
-  <div class="md:col-6" [hidden]="!shouldCreateTimestamp()">
-    <label for="vesselDraft">{{ "general.timestamp.vesselDraft.label" | translate }}:</label>
-    <input id="vesselDraft" formControlName="vesselDraft" pInputText style="width: 100%"
-      type="text" />
-    <span *ngIf="transportCallFormGroup.get('vesselDraft').hasError('pattern')" class="p-invalid">
-      {{ 'general.timestamp.vesselDraft.pattern' | translate }}
-    </span>
-    <span [hidden]="hasDimensionUnit()" class="p-warning">
-      {{ 'general.timestamp.vesselDraft.missingUnit' | translate }}
-    </span>
-  </div>
-
-    <!-- Miles remaining -->
-    <div class="md:col-6" [hidden]="!showMilesToDestinationPortOption() || !shouldCreateTimestamp()">
-      <label for="milesToDestinationPort">{{ "general.timestamp.milesToDestinationPort.label" | translate }}:</label>
-      <input id="milesToDestinationPort" formControlName="milesToDestinationPort" pInputText style="width: 100%"
-             type="text" />
-      <span *ngIf="transportCallFormGroup.get('milesToDestinationPort').hasError('pattern')" class="p-invalid">
-        {{ 'general.timestamp.milesToDestinationPort.pattern' | translate }}
-      </span>
-    </div>
-
-    <!-- Delay Remark -->
-    <div class="md:col-6" [hidden]="!shouldCreateTimestamp()">
-      <span class="p-float-label">
-        <textarea pInputTextarea id="commentbox" formControlName="defaultTimestampRemark"
-                  [readOnly]="!shouldCreateTimestamp()"></textarea>
-        <label for="commentbox">{{ 'general.comment.tooltip' | translate }}</label>
-      </span>
-    </div>
-
+    <label for="createTimestamp"> Check to create Timestamp </label>
+    <input id="createTimestamp"
+           class="p-checkbox-box"
+           type="checkbox"
+           [(ngModel)]="createTimestampChecked"
+           [ngModelOptions]="{standalone: true}">
   </div>
 
   <div class="grid">
@@ -315,15 +112,9 @@
       <p-button class="footer_option__buttons" icon="pi pi-times-circle" (onClick)="close()"
         label="{{'general.close.label' | translate}}" iconPos="left">
       </p-button>
-      <p-button [hidden]="!shouldCreateTimestamp()"
-                [disabled]="!fullVesselDetails"
-                (onClick)="editVessel()" class="p-button-raised p-button-rounded"
-                label="{{ 'general.vessel.edit.label' | translate }}"
-                type="button">
-      </p-button>
-      <p-button label="{{ createButtonText() | translate }}" iconPos="left" class="footer_option__buttons"
-        icon="pi pi-save" appDebounceClick (debounceClick)="saveNewTransportCall()" [debounceTime]="200"
-        [disabled]="transportCallFormGroup.invalid">
+      <p-button label="{{ proceedButtonText() | translate }}" iconPos="left" class="footer_option__buttons"
+                icon="pi pi-save" appDebounceClick (debounceClick)="proceed()" [debounceTime]="200"
+                [disabled]="transportCallFormGroup.invalid">
 
         <p-progressSpinner *ngIf="creationProgress" [style]="{width: '18px', height: '18px'}"
           styleClass="custom-spinner" strokeWidth="3" animationDuration=".9s"></p-progressSpinner>
