DDT-1241: Conditionally show vessel draft field
Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -199,7 +199,7 @@
   </div>
 
   <!-- Vessel draft -->
-  <div class="md:col-6">
+  <div class="md:col-6" [hidden]="!(selectedTimestampDefinition$ | async)?.isVesselDraftRelevant">
     <label for="vesselDraft">{{ "general.timestamp.vesselDraft.label" | translate }}:</label>
     <input id="vesselDraft" formControlName="vesselDraft" pInputText style="width: 100%"
            type="text" />
