DDT-1307: Add missing filterBy for delayCodes
Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -167,6 +167,7 @@
                 [filter]="true"
                 [showClear]=true
                 [group]="false"
+                filterBy="smdgCode,name,delayType,description"
                 placeholder="{{ 'general.comment.select' | translate }}">
       <ng-template let-delayCode pTemplate="selectedItem">
         <div *ngIf="delayCode" class="delayCodeSelectedWrapper">
