Fix styling for "showClear" drop downs
Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/src/app/view/show-json-dialog/show-timestamp-as-json-dialog.component.scss
+++ b/src/app/view/show-json-dialog/show-timestamp-as-json-dialog.component.scss
@@ -29,12 +29,12 @@ p-dropdown::ng-deep {
 
 .ui-dropdown .ui-dropdown-clearable .ui-dropdown-label {
   text-overflow: ellipsis;
-  padding-right: 2em !important;
+  padding-right: 2em;
 }
 
 ::ng-deep .p-dropdown .p-dropdown-label {
   text-overflow: ellipsis;
-  padding-right: 1em !important;
+  padding-right: 1em;
 }
 
 .p-dropdown-label {
