--- a/src/app/view/timestamp-editor/timestamp-editor.component.scss
+++ b/src/app/view/timestamp-editor/timestamp-editor.component.scss
@@ -29,12 +29,12 @@ p-dropdown::ng-deep {
 
 .ui-dropdown .ui-dropdown-clearable .ui-dropdown-label {
   text-overflow: ellipsis;
-  padding-right: 2em !important;
+  padding-right: 2em;
 }
 
 ::ng-deep .p-dropdown .p-dropdown-label {
   text-overflow: ellipsis;
-  padding-right: 1em !important;
+  padding-right: 1em;
 }
 
 .p-dropdown-label {
