--- a/src/app/view/header/header.component.scss
+++ b/src/app/view/header/header.component.scss
@@ -75,3 +75,43 @@ p-dropdown::ng-deep {
 .center-button-in-div{
   margin:auto;
 }
+
+  button.button-sign-out {
+    --background-color: #ff9900;
+    --border-width: 0;
+    --border-color: initial;
+    --border-style: initial;
+    --border-radius: initial;
+    width: auto;
+    min-width: auto;
+    display: inline-block;
+    margin-bottom: 0;
+    font-size: var(--amplify-text-sm);
+    font-family: var(--amplify-font-family);
+    font-weight: 600;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    padding: 0.5rem ;
+    letter-spacing: 0.75px;
+    text-transform: uppercase;
+    border-width: var(--border-width);
+    border-color: var(--border-color);
+    border-style: var(--border-style);
+    border-radius: var(--border-radius);
+    color: #F8F7F7;
+    text-align: center;
+    background-color: var(--background-color);
+    border: 1px solid background-color;
+    padding: 0.5rem 0.75rem;
+    font-size: 10pt;
+    height: 39px;
+    border-radius: 4px;
+  }
